[gd_scene load_steps=9 format=2]

[ext_resource path="res://LevelElements/UI/Hud.gd" type="Script" id=1]
[ext_resource path="res://LevelElements/UI/WarmthBar.gd" type="Script" id=2]

[sub_resource type="InputEventAction" id=1]
action = "restart"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.878431, 0.345098, 0, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.803922, 1, 1 )

[sub_resource type="InputEventAction" id=5]
action = "ui_accept"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[node name="Hud" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 50.0
margin_top = 10.0
margin_right = -50.0
margin_bottom = 40.0
custom_constants/separation = 19
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="HBoxContainer"]
margin_left = 648.0
margin_right = 705.0
margin_bottom = 30.0
shortcut = SubResource( 2 )
text = "Restart"

[node name="WarmthBar" type="ProgressBar" parent="HBoxContainer"]
margin_left = 724.0
margin_right = 924.0
margin_bottom = 30.0
rect_min_size = Vector2( 200, 30 )
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
percent_visible = false
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LooseLevel" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="LooseLevel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartButton" type="Button" parent="LooseLevel/CenterContainer"]
margin_left = 477.0
margin_top = 265.0
margin_right = 547.0
margin_bottom = 335.0
rect_min_size = Vector2( 70, 70 )
text = "Restart"

[node name="LevelFinished" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="LevelFinished"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -7.0
margin_bottom = -7.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="LevelFinished/CenterContainer"]
margin_left = 477.0
margin_top = 265.0
margin_right = 547.0
margin_bottom = 335.0
rect_min_size = Vector2( 70, 70 )
shortcut = SubResource( 6 )
text = "Next"
[connection signal="pressed" from="HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="LooseLevel/CenterContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
